upper portion done

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1 id="h1two">Symum's <span class="jhakanaka-highlight">Jhakanaka</span> Demo Portfolio
             </h1>
             <h3>World-Class Procrastinator</h3>
             <p>Wait, I shouldn't be writing this here! oops</p>
+            <a class="link-button" target="new_tab" href="https://www.linkedin.com/in/symumhasan/"><b>HIRE ME</b> (Please!)</a>
         </div>
         <div id="symumphoto" class="half-width">
             <img src="images/profile1.png" alt="Symum's Photo">
