first version completed

--- a/index.html
+++ b/index.html
@@ -19,14 +19,40 @@
             <h1>Welcome To</h1>
             <h1 id="h1two">Symum's <span class="jhakanaka-highlight">Jhakanaka</span> Demo Portfolio
             </h1>
-            <h3>World-Class Procrastinator</h3>
-            <p>Wait, I shouldn't be writing this here! oops</p>
+            <h2>World-Class Procrastinator</h2>
+            <p>Wait, I shouldn't be writing this here! Anyway</p>
             <a class="link-button" target="new_tab" href="https://www.linkedin.com/in/symumhasan/"><b>HIRE ME</b> (Please!)</a>
         </div>
         <div id="symumphoto" class="half-width">
             <img src="images/profile1.png" alt="Symum's Photo">
         </div>
     </section>
+    <section class="second-part">
+        <div class="half-width">
+            <img id="pp2" src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>This One Looks Professional Right?!</h2>
+            <p>So hiring me now would be a <span class="good-idea">good idea</span>. Click below to check out my cool facebook profile. (For the Sake of Networking)</p>
+            <a id="fb" target="new-tab" href="https://www.facebook.com/symumsakin">Let's Become Friends (Maybe?)</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2 id="xptitle">Experiences</h2>
+        <div id="left-line" class="half-width single-block">
+            <h2>Thrilling Adventures</h2>
+            <h3 class="newh3color">To My University Campus...</h3>
+            <p>Once upon a time I used to go to my university campus. Nice looking buses used to come from my campus to other routes and not so nice looking ones to my route. But I used to be sitting in my chair drinking my tea with utmost peace at home and be late and you guessed it right, miss the bus. Then hop on a CNG Auto-Rickshaw and catch the bus at Amberkhana Point or Subidbazar Point or Madina Market Point or... anyway that's not the point. Long story short, I have the experience of some thrilling adventures. There are more stories. But I'm too lazy to write them.</p>
+        </div>
+        <div id="right-line" class="half-width single-block">
+            <h2>Being Someone's Ex</h2>
+            <h3 class="newh3color">Yeah...</h3>
+            <p>Hope you count it as an experience because I have nothing else to write here. Hire Me!! Because I need some experiences to write here. Please.</p>
+        </div>
+    </section>
+    <footer>
+        <p id="copyR">Copyright © 2021 All rights reserved by Mr. Symum Sakin for Successfully Ruining the Color Grading. </p>
+    </footer>
 </body>
 
 </html>
