small change in footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </section>
     <footer>
-        <p id="copyR">Copyright © 2021 All rights reserved by Mr. Symum Sakin for Successfully Ruining the Color Grading. </p>
+        <p id="copyR">Copyright © 2021 All rights reserved by Mr. Symum Sakin for Successfully Ruining the Color Scheme. </p>
     </footer>
 </body>
 
