--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="right-line" class="half-width single-block">
             <h2>Being Someone's Ex</h2>
             <h3 class="newh3color">Yeah...</h3>
-            <p>Hope you count it as an experience because I have nothing else to write here. Hire Me!! Because I need some experiences to write here. Please.</p>
+            <p>Hope you count it as an experience as I have nothing else to write here. Hire Me!! Because I need some experiences to write here. Please.</p>
         </div>
     </section>
     <footer>
