--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Symum's Demo Portfolio</title>
 </head>
 
