--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="right-line" class="half-width single-block">
             <h2>Under Construction</h2>
             <h3 class="newh3color">Yeah...</h3>
-            <p>Yeah</p>
+            <p>Yeah.</p>
         </div>
     </section>
     <footer>
