--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <h2 id="xptitle">Experiences</h2>
         <div id="left-line" class="half-width single-block">
             <h2>Thrilling Adventures</h2>
-            <h3 class="newh3color">To My University Campus...</h3>
-            <p>Once upon a time I used to go to my university campus. Nice looking buses used to come from my campus to other routes and not so nice looking ones to my route. But I used to be sitting in my chair drinking my tea with utmost peace at home and be late, eventually missing the bus. Then hop on a CNG Auto-Rickshaw and catch the bus at Amberkhana Point or Subidbazar Point or Madina Market Point or... anyway that's not the point. Long story short, I have the experience of some thrilling adventures. There are more stories. But I'm too lazy to write them.</p>
+            <h3 class="newh3color">I Just Deleted This Part</h3>
+            <p>What are you trying to read?</p>
         </div>
         <div id="right-line" class="half-width single-block">
-            <h2>Being Someone's Ex</h2>
+            <h2>Under Construction</h2>
             <h3 class="newh3color">Yeah...</h3>
-            <p>Hope you count it as an experience as I have nothing else to write here. Hire Me!! Because I need some experiences to write here. Please.</p>
+            <p>Yeah.</p>
         </div>
     </section>
     <footer>
