--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         <div id="right-line" class="half-width single-block">
             <h2>Under Construction</h2>
-            <h3 class="newh3color">Yeah...</h3>
-            <p>Yeah.</p>
+            <h3 class="newh3color">...</h3>
+            <p>...</p>
         </div>
     </section>
     <footer>
